# ChangeLog for net-wireless/bluez
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez/ChangeLog,v 1.13 2009/09/20 19:34:34 nirbheek Exp $

  20 Sep 2009; Nirbheek Chauhan <nirbheek@gentoo.org> bluez-4.28.ebuild,
  bluez-4.38.ebuild, bluez-4.39.ebuild, bluez-4.39-r1.ebuild:
  Fix elog info about password agents, bug 284664

*bluez-4.39-r1 (05 Sep 2009)

  05 Sep 2009; Patrick Lauer <patrick@gentoo.org> +bluez-4.39-r1.ebuild,
  +files/bluez-plugdev.patch:
  Adding plugdev policy. Fixes #283744. Thanks to Fabio Erculiani.

*bluez-4.39 (11 May 2009)

  11 May 2009; Tiziano Müller <dev-zero@gentoo.org> -bluez-4.21.ebuild,
  -bluez-4.36.ebuild, -bluez-4.37.ebuild, +bluez-4.39.ebuild:
  Version bump. Dropped old.

*bluez-4.38 (04 May 2009)

  04 May 2009; Tiziano Müller <dev-zero@gentoo.org> +bluez-4.38.ebuild:
  Version bump.

*bluez-4.37 (24 Apr 2009)

  24 Apr 2009; Tiziano Müller <dev-zero@gentoo.org> -bluez-4.32.ebuild,
  -bluez-4.34.ebuild, +bluez-4.37.ebuild:
  Version bump. Dropped old.

*bluez-4.36 (19 Apr 2009)

  19 Apr 2009; Tiziano Müller <dev-zero@gentoo.org> +bluez-4.36.ebuild:
  Version bump (seems to be a bugfix only release).

*bluez-4.34 (07 Apr 2009)

  07 Apr 2009; Tiziano Müller <dev-zero@gentoo.org>
  +files/4.34-conditional_libsbc.patch, +bluez-4.34.ebuild:
  Version bump, fixed build problems with --disable{alsa,gstreamer}. Bug
  #260374 has already been solved in an earlier bump.

  10 Mar 2009; Tiziano Müller <dev-zero@gentoo.org> bluez-4.32.ebuild:
  Added pambase[consolekit] to RDEPEND to get at least the basics ready
  needed to run bluez as user.

*bluez-4.32 (04 Mar 2009)

  04 Mar 2009; Tiziano Müller <dev-zero@gentoo.org> -bluez-4.31.ebuild,
  +bluez-4.32.ebuild:
  Version bump (fixes memory leaks and segfaults). Dropping old.

*bluez-4.31 (27 Feb 2009)

  27 Feb 2009; Tiziano Müller <dev-zero@gentoo.org>
  +files/4.31-as_needed.patch, +bluez-4.31.ebuild: