@@ -14,6 +14,7 @@ DIST bluez-4.39.tar.gz 998208 RMD160 c1a5e2dbfc44713ade22d4d669f63b98da95c899 SH
 EBUILD bluez-4.28.ebuild 4907 RMD160 bb00cdefb3b9f8c58b0cbe7da6f1a6b0a3e5458f SHA1 4ef1351d54d95ebaa6efeff57c381ec685744442 SHA256 bfaf4aad3bda449b04bd6fa5c020be9ec710babb1a7a46a70a774c592f016505
 EBUILD bluez-4.38.ebuild 5069 RMD160 88b34a8873151b6d87b581d535bfb1c2c338b902 SHA1 a83d8d79725404ec736ede34c5de23b681cd1ec1 SHA256 86ced076b6417ab22f2548bf84cf5fb850ecdd8be6ba2360c891b151c79432b1
 EBUILD bluez-4.39-r1.ebuild 5114 RMD160 0c5827b9a110df58982132e27a12bd6a3f3df309 SHA1 5db15bb0f6cedb3671bcc78b8b54ba6630abd0a7 SHA256 e93d746670b5b916a1875eb083eece214eeaccc3e2d50767b76ee078200fa7b3
+EBUILD bluez-4.39-r2.ebuild 5244 RMD160 372304868acfe24851ed63ea0437cff0c839d4fa SHA1 338f335a97bfd55a72ff63239c2a24c0afeee824 SHA256 b6a5767122ae2b1d1e053a4d7359e05be0202867c2cb85397c9c454f6bd1a83f
 EBUILD bluez-4.39.ebuild 5069 RMD160 a259e1816dbab10faa7868066f30716749412b08 SHA1 dd08230f661ef4ba273bf95866db3e4c57ec050e SHA256 71c1ac1b22c0f7eb0aa7c705d3a632ed4fedcd53c3146eaa34f388b5e313dade
-MISC ChangeLog 2762 RMD160 bf3b1beacf962b5c622670a29862762b4b59eafc SHA1 4f44b378b391da031c00ccc0183900b7d0deb4ce SHA256 d78815c8a5e2b9f047f17228294f3ccc69ef5928da89bf980af45a9cc4245e40
-MISC metadata.xml 514 RMD160 89fa06d58b02ddf9cf942c3e8662cbdc70e14587 SHA1 5f91b2a84e74029a5f8eb7362d6412b36518cdec SHA256 03647e723337dcd35c89f4dfcecaeeefba99883d690e6e91320804d5f8a22f9e
+MISC ChangeLog 3034 RMD160 3a10f849de60dbd9389fdd4fa9af5e7a37be2484 SHA1 053e2f82e9fc6d0b0b0f3360600b54555bb38c34 SHA256 a9abfb59872dd3b1e87f697f001a2b9bb3dfb647cd5a88192279078ad3571b5d
+MISC metadata.xml 695 RMD160 22c624b70b3a7cbf46877876aff36110331c6371 SHA1 0ccc35bd0904748aad03bf95560bd01c14571623 SHA256 3468c8be9e77005075bb150b5fcfb0f10ae3fa0e2775fde2a3ff259852c5f8d5
