@@ -10,6 +10,9 @@
 		<email>betelgeuse@gentoo.org</email>
 	</maintainer>
 	<use>
+		<flag name='consolekit'>Use <pkg>sys-auth/pambase[consolekit]</pkg> to
+			determine access to bluetooth devices based on whether a user is
+			logged in locally or remotely</flag>
 		<flag name='old-daemons'>Install old daemons like hidd and sdpd that are
 			deprecated by the new Service framework</flag>
 		<flag name='test-programs'>Install l2test and rctest</flag>
